
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service]. 

[[v.0.27.0]]
== 0.27.0 (To be released)

icon:check[] Security: A security issue has been fixed.

[[v0.26.0]]
== 0.26.0 (15.10.2018)

icon:plus[] Branches: It is now possible to set the "latest" branch of a project.

icon:plus[] Branches: It is now possible to create branches based on specific other branches.

icon:plus[] Branches: Branches can now be tagged just like nodes.

icon:plus[] Clustering: The Hazelcast kubernetes autodiscovery plugin was added to Gentics Mesh. It is now possible to use this plugin to discover nodes in an k8s environment. Take a look at our link:{{< relref "clustering.asciidoc" >}}#_kubernetes[Documentation] for more details.

icon:check[] Java REST Client: Add more detailed error information to `MeshRestClientMessageException` class.

[[v0.25.0]]
== 0.25.0 (08.10.2018)

icon:plus[] Plugins: It is now possible to override plugin config in a `config.local.yml` file

icon:plus[] Core: The core Vert.x library was updated to version 3.5.4

icon:plus[] OrientDB: The included OrientDB version has been updated to version 2.2.37

icon:plus[] GraphQL: Added filters for users, groups and roles.

icon:check[] GraphQL: GraphQL Java has been updated to version 10.0

icon:check[] Core: Loading of older jobs could cause an error. The causes of those errors have been fixed.

icon:check[] Migration: Fix migration regression which was introduced with 0.24.1

icon:check[] Demo: Fix demo webroot path handling. This fix only affects new demo setups.

[[v0.24.1]]
== 0.24.1 (02.10.2018)

icon:plus[] Config: It is now possible to configure the path to the mesh lock file using the `MESH_LOCK_PATH` environment variable. link:https://github.com/gentics/mesh/issues/506[#506]

icon:plus[] It is now possible to add custom languages by configuration.
